--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
     "jsx": "react",
     "allowJs": true,
     "declaration": true,
+    "declarationDir": "./types",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "esModuleInterop": true
   }
 }
