--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "server-driven-client-js",
   "version": "1.0.0",
   "description": "Server driven for Javascript Engine",
-  "main": "lib/main.js",
-  "types": "types/src/main.d.ts",
+  "main": "lib/index.js",
+  "types": "types/src/index.d.ts",
   "scripts": {
     "dev": "npm run development",
     "development": "node_modules/.bin/webpack --progress --mode=development --config=webpack.config.js",
