--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,13 @@
   "compilerOptions": {
     "outDir": "./lib/",
     "noImplicitAny": true,
-    "module": "ES2015",
-    "target": "es6",
+    "module": "CommonJS",
+    "target": "es5",
     "jsx": "react",
     "allowJs": true,
     "declaration": true,
     "declarationDir": "./types",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
   }
 }
