--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "npm run development",
     "development": "node_modules/.bin/webpack --progress --mode=development --config=webpack.config.js",
     "watch": "node_modules/.bin/webpack --progress --mode=development --config=webpack.config.js --watch",
-    "prod": "npm run production",
-    "production": "node_modules/.bin/webpack --mode=production --config=webpack.config.js"
+    "build": "node_modules/.bin/webpack --mode=production --config=webpack.config.js",
+    "test": "node_modules/.bin/webpack --mode=production --config=test/webpack.config.js && node dist/test.js"
   },
   "author": "Eduardo Quiroz",
   "license": "ISC",
